service DiscountService {
    rpc GetDiscount (GetDiscountRequest) returns (GetDiscountResponse) {}
}

message Discount {
    int32 amountInCents = 1;
    int32 percentual = 2;
}

message GetDiscountRequest {
    int64 productID = 1;
    int64 userID = 2;
}

message GetDiscountResponse {
    Discount discount = 1;
}